k8s-ckad/configs/leaveness.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mayapp-pod
  labels:
    app: mayapp
    costcenter: uk
    type: frontend
spec:
  containers:
  - name: webapp
    image: webapp
    ports:
    - containerPort: 8080
    livenessProbe:
      httpGet:
        path: /api/ready
        port: 8080
      tcpSocket:
        port: 3306
      exec:
        command:
        - cat
        - app/is_ready
    resources: {}
