k8s-ckad/configs/nodeaffinity.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mayapp-pod
  labels:
    app: mayapp
    costcenter: uk
    type: frontend
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: "1Gi"
        cpu: 1
      limits:
        memory: "1Gi"
        cpu: 1
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: size
            operator: In|NotIn|Exists
            values:
            - Large
            - Medium
