k8s-ckad/configs/nodeselector.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mayapp-pod
  labels:
    app: mayapp
    costcenter: uk
    type: frontend
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: "1Gi"
        cpu: 1
      limits:
        memory: "1Gi"
        cpu: 1
  nodeSelector:
    size: Large
