k8s-ckad/configs/pod.volume.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mayapp-pod
  labels:
    app: mayapp
    costcenter: uk
    type: frontend
spec:
  containers:
  - name: nginx-container
    image: nginx
    resources: {}
  volumes:
    - name: data-volume
      hostPath: /data
      type: Directory
